@@ -6,7 +6,7 @@
 	    { "name" : "bulb_timer", "type": "boolean", "address": "0x133"},
 	    { "name" : "bulb_timer_sec", "type": "uint16", "address": "0x134"},
 	    { "name" : "using_aperture_ring", "type": "boolean", "address": "0x18c"},
-	    { "name" : "shake_reduction", "type": "boolean!", "address": "0x07d"}
+	    { "name" : "shake_reduction", "type": "boolean!", "address": "0x07d"},
 	]
     },
 
@@ -15,7 +15,8 @@
 	    { "name" : "bulb_mode_press_press", "type": "boolean", "value": "false" },
 	    { "name" : "one_push_bracketing", "type": "boolean", "value": "false"},
 	    { "name" : "bulb_timer", "type": "boolean", "value": "false"},
-	    { "name" : "bulb_timer_sec", "type": "boolean" }
+	    { "name" : "bulb_timer_sec", "type": "boolean" },
+	    { "name" : "astrotracer", "type": "boolean", "value": "false"}
 	]
     },
 
@@ -30,5 +31,12 @@
 	    { "name" : "bulb_timer", "type": "boolean", "address": "0x131"},
 	    { "name" : "bulb_timer_sec", "type": "uint16", "address": "0x132"}
 	]
+    },
+
+    "0x1309c": {
+	"fields": [
+	    { "name" : "astrotracer", "type": "boolean", "address": "0x1ac"}
+	]
     }
+
 }
