@@ -131,6 +131,7 @@ typedef struct {
     pslr_uint16_setting bulb_timer_sec;
     pslr_bool_setting using_aperture_ring;
     pslr_bool_setting shake_reduction;
+    pslr_bool_setting astrotracer;
 } pslr_settings;
 
 typedef struct {
