@@ -24,6 +24,7 @@ version 0.84.05
 	Default mode prints out status info instead of taking a picture
 	using_aperture_ring setting reading for K-70
 	shake_reduction setting reading for K-70
+	astrotracer setting reading for K-3II (testing)
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
